test fix overflow mobile

--- a/css/main.css
+++ b/css/main.css
@@ -384,7 +384,8 @@ a {
   height: 100vh; }
 
 .main-page-index {
-  overflow: hidden; }
+  overflow: hidden;
+  height: 100vh; }
 
 body {
   overflow: hidden; }
