--- a/css/scss/layout/_main.scss
+++ b/css/scss/layout/_main.scss
@@ -15,4 +15,5 @@
 
 .main-page-index {
   overflow: hidden;
+  height: 100vh;
 }
